--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,8 +27,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Run tests
+      - name: Mypy
+        run: uv run --frozen mypy --color src/
+
+      - name: Tests
         run: uv run --frozen pytest --color=yes -v tests
 
-      - name: Run typing checks
-        run: uv run --frozen mypy -v src/
+      - name: Build
+        run: uv build
