--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: publish
+name: Publish
 
 on:
   push:
@@ -15,6 +15,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Validate tag commit matches master HEAD
+        env:
+          MASTER_REF: ${{ github.event.repository.default_branch }}
+        run: |
+          git fetch origin "${MASTER_REF}" --depth=1
+          tag_commit="$(git rev-parse HEAD)"
+          master_commit="$(git rev-parse origin/"${MASTER_REF}")"
+          if [ "${tag_commit}" != "${master_commit}" ]; then
+              echo "::error::Tag commit ${tag_commit} does not match ${MASTER_REF} HEAD ${master_commit}"
+              exit 1
+          fi
+          echo "Tag commit matches ${MASTER_REF} HEAD ${master_commit}"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
@@ -46,5 +61,5 @@ jobs:
         run: uv build
 
       - name: Publish to PyPI
-        run: uv publish --non-interactive dist/*
+        run: uv publish --verbose dist/*
         # environment 'publish', secret: UV_PUBLISH_TOKEN
