--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,4 +32,5 @@ jobs:
 
       - name: Publish to PyPI
         run: uv publish --verbose dist/*
-        # environment 'upload', secret: UV_PUBLISH_TOKEN
+        env:
+          UV_PUBLISH_TOKEN: "${{ secrets.UV_PUBLISH_TOKEN }}"
